--- a/client/about.html
+++ b/client/about.html
@@ -4,7 +4,7 @@
 
 	<h1 id="hungry">About So'Deis</h1>
 	<p>
-		Hello! Welsome to So'Deis the only website youll need to have a good time at Brandeis University.   
+		Hello! Welcome to So'Deis the only website youll need to have a good time at Brandeis University.   
 		
 	</p>
 </div>
@@ -18,7 +18,7 @@
     <td>
     	<p>
 				<h2>Feedback</h2>
-				In the Fedback tab above you are able to tell us how you feel about our website, positive or negative, in the hopes to make the best website for our members.
+				In the Feedback tab above you are able to tell us how you feel about our website, positive or negative, in the hopes to make the best website for our members.
 				</p>
 	</td> 
   </tr>
@@ -26,7 +26,7 @@
     <td>
     	<p>
 				<h2>Carpool</h2>
-				In the Fedback tab above you are able to tell us how you feel about our website, positive or negative, in the hopes to make the best website for our members.
+				The carpool tab is there to help you in transportation. If you want to go anywhere but unfortunately you lack transportation, just check out carpool on the sodeis app.
 				</p>
 	</td>
     <td>
