--- a/client/carpool.html
+++ b/client/carpool.html
@@ -7,7 +7,7 @@
 				<p1 id="c1">
 				Do it for the enviornmet
 				</p1>
-				<p2> Were all going to the same place so why not carpool? Not only will you keep underclassman from walking in the snow you will have a group to go to the party with. 
+				<p2> We are all going to the same place so why not carpool? Not only will you keep underclassman from walking in the snow you will have a group to go to the party with. 
 				</p2>
 			</div>
 			<div class="col-md-6">
