--- a/client/feedback.html
+++ b/client/feedback.html
@@ -2,7 +2,7 @@
 	<div class="jumbotron">
 		<h1>Feedback</h1>
 		<p> 
-		Hope this app was helpful. Please let us know how feel about this app so we can make changes to fit your preferences. Users are our main priority so feel free to leave us your feedback here!!
+		Hope this app was helpful. Please let us know how feel about this app so we can make changes to fit your preferences. The comfort of our users is our main priority so feel free to leave us your feedback here!!
 		</p>
 	</div>
 	{{#if currentUser}}
